fix overflow

--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@ body {
     var(--color-green) 100%
   );
   margin: 0 auto;
+  overflow-x: hidden;
 }
 
 ::selection {
